# tree-sitter-lupin

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.lpn  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lupin.pc.in
bindings/c/tree_sitter/: tree-sitter-lupin.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lupin/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLupinTests/: TreeSitterLupinTests.swift
src/: grammar.json  node-types.json  parser.c
