[package]
name = "tree-sitter-lupin"
description = "Lupin Tree Sitter"
version = "0.0.1"
authors = ["Iris Junckes <me@junckes.dev>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lupin"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/j-junckes/tree-sitter-lupin"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
